updating to new format

--- a/site/css/main.css
+++ b/site/css/main.css
@@ -10,3 +10,7 @@
 .boolean { color: blue; }
 .null { color: magenta; }
 .key { color: red; }
+.mapping{
+  font-size: 8pt;
+  white-space: nowrap
+}
