--- a/site/css/main.css
+++ b/site/css/main.css
@@ -19,3 +19,4 @@ th::after{ margin-bottom: 22px; }
   font-size: 8pt;
   white-space: nowrap
 }
+.link-small { font-variant: small-caps; margin-left: 2px; font-size: 10pt; }
